// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`linux concurrent 1`] = `
{
  "linux": [
    {
      "arch": "armv7l",
      "file": "Test Concurrent-1.1.0-armv7l.AppImage",
      "safeArtifactName": "Test-Concurrent-1.1.0-armv7l.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x86_64.AppImage",
      "safeArtifactName": "Test-Concurrent-1.1.0-x86_64.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "armv7l",
      "file": "Test Concurrent-1.1.0-armv7l.rpm",
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x86_64.rpm",
    },
  ],
}
`;

exports[`mac concurrent 1`] = `
{
  "mac": [
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.dmg",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-arm64.dmg.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.dmg",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-x64.dmg.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.zip",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-arm64.zip.blockmap",
      "safeArtifactName": "Test Concurrent-1.1.0-arm64.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.zip",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-x64.zip.blockmap",
      "safeArtifactName": "Test Concurrent-1.1.0-x64.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`mac concurrent 2`] = `
{
  "CFBundleDisplayName": "Test Concurrent",
  "CFBundleExecutable": "Test Concurrent",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "test-concurrent",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test Concurrent",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {},
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac concurrent 3`] = `
{
  "CFBundleDisplayName": "Test Concurrent",
  "CFBundleExecutable": "Test Concurrent",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "test-concurrent",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test Concurrent",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {},
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac/win/linux concurrent 1`] = `
{
  "linux": [
    {
      "arch": "armv7l",
      "file": "Test Concurrent-1.1.0-armv7l.AppImage",
      "safeArtifactName": "Test-Concurrent-1.1.0-armv7l.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x86_64.AppImage",
      "safeArtifactName": "Test-Concurrent-1.1.0-x86_64.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
  "mac": [
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.dmg",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-arm64.dmg.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.dmg",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-x64.dmg.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.zip",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-arm64.zip.blockmap",
      "safeArtifactName": "Test Concurrent-1.1.0-arm64.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.zip",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-x64.zip.blockmap",
      "safeArtifactName": "Test Concurrent-1.1.0-x64.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
  "win": [
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-arm64.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-x64.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`mac/win/linux concurrent 2`] = `
{
  "CFBundleDisplayName": "Test Concurrent",
  "CFBundleExecutable": "Test Concurrent",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "test-concurrent",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test Concurrent",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {},
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac/win/linux concurrent 3`] = `
{
  "CFBundleDisplayName": "Test Concurrent",
  "CFBundleExecutable": "Test Concurrent",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "test-concurrent",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test Concurrent",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {},
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`mac/win/linux concurrent 4`] = `
[
  "/",
  "/opt/",
  "/usr/",
  "/opt/TestApp/",
  "/opt/TestApp/chrome-sandbox",
  "/opt/TestApp/chrome_100_percent.pak",
  "/opt/TestApp/chrome_200_percent.pak",
  "/opt/TestApp/chrome_crashpad_handler",
  "/opt/TestApp/icudtl.dat",
  "/opt/TestApp/libEGL.so",
  "/opt/TestApp/libffmpeg.so",
  "/opt/TestApp/libGLESv2.so",
  "/opt/TestApp/libvk_swiftshader.so",
  "/opt/TestApp/libvulkan.so.1",
  "/opt/TestApp/LICENSE.electron.txt",
  "/opt/TestApp/LICENSES.chromium.html",
  "/opt/TestApp/resources.pak",
  "/opt/TestApp/snapshot_blob.bin",
  "/opt/TestApp/testapp",
  "/opt/TestApp/v8_context_snapshot.bin",
  "/opt/TestApp/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/TestApp/resources/",
  "/opt/TestApp/resources/app.asar",
  "/opt/TestApp/resources/apparmor-profile",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`mac/win/linux concurrent 5`] = `
{
  "Architecture": "amd64",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "default",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`mac/win/linux concurrent 6`] = `"Test Application (test quite “ #378)"`;

exports[`mac/win/linux concurrent 7`] = `
[
  "/",
  "/opt/",
  "/usr/",
  "/opt/TestApp/",
  "/opt/TestApp/chrome-sandbox",
  "/opt/TestApp/chrome_100_percent.pak",
  "/opt/TestApp/chrome_200_percent.pak",
  "/opt/TestApp/chrome_crashpad_handler",
  "/opt/TestApp/icudtl.dat",
  "/opt/TestApp/libEGL.so",
  "/opt/TestApp/libffmpeg.so",
  "/opt/TestApp/libGLESv2.so",
  "/opt/TestApp/libvk_swiftshader.so",
  "/opt/TestApp/libvulkan.so.1",
  "/opt/TestApp/LICENSE.electron.txt",
  "/opt/TestApp/LICENSES.chromium.html",
  "/opt/TestApp/resources.pak",
  "/opt/TestApp/snapshot_blob.bin",
  "/opt/TestApp/testapp",
  "/opt/TestApp/v8_context_snapshot.bin",
  "/opt/TestApp/vk_swiftshader_icd.json",
  "/usr/share/",
  "/opt/TestApp/resources/",
  "/opt/TestApp/resources/app.asar",
  "/opt/TestApp/resources/apparmor-profile",
  "/usr/share/applications/",
  "/usr/share/applications/testapp.desktop",
  "/usr/share/doc/",
  "/usr/share/icons/",
  "/usr/share/doc/testapp/",
  "/usr/share/doc/testapp/changelog.gz",
  "/usr/share/icons/hicolor/",
  "/usr/share/icons/hicolor/128x128/",
  "/usr/share/icons/hicolor/16x16/",
  "/usr/share/icons/hicolor/256x256/",
  "/usr/share/icons/hicolor/32x32/",
  "/usr/share/icons/hicolor/48x48/",
  "/usr/share/icons/hicolor/512x512/",
  "/usr/share/icons/hicolor/64x64/",
  "/usr/share/icons/hicolor/128x128/apps/",
  "/usr/share/icons/hicolor/128x128/apps/testapp.png",
  "/usr/share/icons/hicolor/16x16/apps/",
  "/usr/share/icons/hicolor/16x16/apps/testapp.png",
  "/usr/share/icons/hicolor/256x256/apps/",
  "/usr/share/icons/hicolor/256x256/apps/testapp.png",
  "/usr/share/icons/hicolor/32x32/apps/",
  "/usr/share/icons/hicolor/32x32/apps/testapp.png",
  "/usr/share/icons/hicolor/48x48/apps/",
  "/usr/share/icons/hicolor/48x48/apps/testapp.png",
  "/usr/share/icons/hicolor/512x512/apps/",
  "/usr/share/icons/hicolor/512x512/apps/testapp.png",
  "/usr/share/icons/hicolor/64x64/apps/",
  "/usr/share/icons/hicolor/64x64/apps/testapp.png",
]
`;

exports[`mac/win/linux concurrent 8`] = `
{
  "Architecture": "armhf",
  "Depends": "libgtk-3-0, libnotify4, libnss3, libxss1, libxtst6, xdg-utils, libatspi2.0-0, libuuid1, libsecret-1-0",
  "Homepage": "http://foo.example.com",
  "License": "MIT",
  "Maintainer": "Foo Bar <foo@example.com>",
  "Package": "testapp",
  "Priority": "optional",
  "Recommends": "libappindicator3-1",
  "Section": "default",
  "Vendor": "Foo Bar <foo@example.com>",
}
`;

exports[`mac/win/linux concurrent 9`] = `"Test Application (test quite “ #378)"`;

exports[`win concurrent - all targets 1`] = `
{
  "win": [
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.7z",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.7z",
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.7z",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.7z",
    },
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.appx",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.appx",
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.appx",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.appx",
    },
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-arm64.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-x64.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.exe",
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.exe",
    },
    {
      "file": "Test Concurrent-1.1.0.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0.exe",
    },
    {
      "arch": "x64",
      "file": "concurrent-1.1.0-full.nupkg",
    },
    {
      "arch": "arm64",
      "file": "concurrent-1.1.0-full.nupkg",
    },
    {
      "arch": "x64",
      "file": "RELEASES",
    },
    {
      "arch": "arm64",
      "file": "RELEASES",
    },
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.exe",
      "safeArtifactName": "concurrent-Setup-1.1.0-arm64.exe",
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.exe",
      "safeArtifactName": "concurrent-Setup-1.1.0.exe",
    },
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.tar.bz2",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.tar.bz2",
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.tar.bz2",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.tar.bz2",
    },
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.tar.gz",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.tar.gz",
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.tar.gz",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.tar.gz",
    },
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.tar.xz",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.tar.xz",
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.tar.xz",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.tar.xz",
    },
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.zip",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.zip",
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.zip",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.zip",
    },
  ],
}
`;

exports[`win concurrent - all targets 2`] = `
[
  "concurrent.nuspec",
  "lib/",
  "lib/net45/",
  "lib/net45/chrome_100_percent.pak",
  "lib/net45/chrome_200_percent.pak",
  "lib/net45/d3dcompiler_47.dll",
  "lib/net45/ffmpeg.dll",
  "lib/net45/icudtl.dat",
  "lib/net45/libEGL.dll",
  "lib/net45/libGLESv2.dll",
  "lib/net45/LICENSE.electron.txt",
  "lib/net45/LICENSES.chromium.html",
  "lib/net45/resources.pak",
  "lib/net45/snapshot_blob.bin",
  "lib/net45/squirrel.exe",
  "lib/net45/Test Concurrent.exe",
  "lib/net45/Test Concurrent_ExecutionStub.exe",
  "lib/net45/v8_context_snapshot.bin",
  "lib/net45/vk_swiftshader.dll",
  "lib/net45/vk_swiftshader_icd.json",
  "lib/net45/vulkan-1.dll",
  "lib/net45/locales/en-US.pak",
  "lib/net45/resources/",
  "lib/net45/resources/app.asar",
  "package/",
  "package/services/",
  "package/services/metadata/",
  "package/services/metadata/core-properties/",
  "[Content_Types].xml",
  "_rels/",
  "_rels/.rels",
]
`;

exports[`win concurrent - all targets 3`] = `
[
  "concurrent.nuspec",
  "lib/",
  "lib/net45/",
  "lib/net45/chrome_100_percent.pak",
  "lib/net45/chrome_200_percent.pak",
  "lib/net45/d3dcompiler_47.dll",
  "lib/net45/ffmpeg.dll",
  "lib/net45/icudtl.dat",
  "lib/net45/libEGL.dll",
  "lib/net45/libGLESv2.dll",
  "lib/net45/LICENSE.electron.txt",
  "lib/net45/LICENSES.chromium.html",
  "lib/net45/resources.pak",
  "lib/net45/snapshot_blob.bin",
  "lib/net45/squirrel.exe",
  "lib/net45/Test Concurrent.exe",
  "lib/net45/Test Concurrent_ExecutionStub.exe",
  "lib/net45/v8_context_snapshot.bin",
  "lib/net45/vk_swiftshader.dll",
  "lib/net45/vk_swiftshader_icd.json",
  "lib/net45/vulkan-1.dll",
  "lib/net45/locales/en-US.pak",
  "lib/net45/resources/",
  "lib/net45/resources/app.asar",
  "package/",
  "package/services/",
  "package/services/metadata/",
  "package/services/metadata/core-properties/",
  "[Content_Types].xml",
  "_rels/",
  "_rels/.rels",
]
`;

exports[`win concurrent 1`] = `
{
  "win": [
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-arm64.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-x64.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`win/linux concurrent 1`] = `
{
  "linux": [
    {
      "arch": "armv7l",
      "file": "Test Concurrent-1.1.0-armv7l.AppImage",
      "safeArtifactName": "Test-Concurrent-1.1.0-armv7l.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x86_64.AppImage",
      "safeArtifactName": "Test-Concurrent-1.1.0-x86_64.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
  "win": [
    {
      "arch": "arm64",
      "file": "Test Concurrent-1.1.0-arm64.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-arm64.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-arm64.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test Concurrent-1.1.0-x64.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0-x64.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0-x64.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0.exe",
      "safeArtifactName": "Test-Concurrent-1.1.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test Concurrent-1.1.0.exe.blockmap",
      "safeArtifactName": "Test-Concurrent-1.1.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;
